Закончить функциональность Items