@@ -3,13 +3,14 @@ package ru.practicum.shareit.item.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.exception.NotFoundException;
+import ru.practicum.shareit.item.Item;
 import ru.practicum.shareit.item.dto.ItemDto;
 import ru.practicum.shareit.item.dto.mapper.ItemMapper;
-import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.item.repository.ItemRepository;
+import ru.practicum.shareit.user.User;
 import ru.practicum.shareit.user.repository.UserRepository;
-import java.util.List;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,42 +18,47 @@ import java.util.stream.Collectors;
 @Service
 @Slf4j
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
     private final UserRepository userRepository;
     private final ItemRepository itemRepository;
 
     @Override
-    public List<ItemDto> getItems(Long userId) {
+    public List<ItemDto> getByUserId(Long userId) {
         log.info("Get items from user {}", userId);
-        return itemRepository.findAll(userId).stream()
+        // избегаем N+1 запросов через запросный метод.
+        return itemRepository.findByOwner_Id(userId).stream()
                 .map(ItemMapper::toItemDto)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public ItemDto getItem(Long userId, Long itemId) {
+    public ItemDto getById(Long itemId) {
         log.info("Get item from item {}", itemId);
-        return itemRepository.findById(userId, itemId)
+        return itemRepository.findById(itemId)
                 .map(ItemMapper::toItemDto)
-                .orElseThrow(() -> new NotFoundException("Вещь с id " + userId + " не найден."));
+                .orElseThrow(() -> new NotFoundException("Вещь с id " + itemId + " не найден."));
     }
 
     @Override
-    public ItemDto addNewItem(Long userId, ItemDto item) {
+    @Transactional
+    public ItemDto add(Long userId, ItemDto item) {
         log.info("Add new item from user {}", userId);
-        userRepository.findById(userId)
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id " + userId + " не найден."));
         Item model = ItemMapper.toItem(item);
-        model.setOwner(userId);
+        model.setOwner(user);
         return ItemMapper.toItemDto(itemRepository.save(model));
     }
 
     @Override
-    public ItemDto updateItem(Long itemId, ItemDto item, Long userId) {
+    @Transactional
+    public ItemDto update(Long itemId, ItemDto item, Long userId) {
         log.info("Update item from user {}", userId);
+        // ищем пользователя по id, проверяем существует ли он ?
         userRepository.findById(userId)
                 .orElseThrow(() -> new NotFoundException("Пользователь с id " + userId + " не найден."));
-        Item model = itemRepository.findById(userId, itemId)
+        Item model = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException("Вещь с id " + userId + "не найдена."));
 
         if (item.getName() != null) {
@@ -69,21 +75,13 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
-    public List<ItemDto> searchItem(Long userId, String textSearch) {
-        log.info("Search item from user {}", userId);
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь с id " + userId + " не существует."));
-        List<Item> items = itemRepository.findAll(userId);
-        if (items.isEmpty() || textSearch.isEmpty()) {
+    public List<ItemDto> search(String textSearch) {
+        log.info("Search items by text {}", textSearch);
+        if (textSearch.isEmpty()) {
             return List.of();
         }
-
-        return items.stream()
-                .filter(item ->
-                        (item.getName().toLowerCase().contains(textSearch.toLowerCase()) ||
-                                item.getDescription().toLowerCase().contains(textSearch.toLowerCase())) &&
-                                (item.getAvailable() != false))
+        return itemRepository.search(textSearch).stream()
                 .map(ItemMapper::toItemDto)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
